# Mac-M5-Deepseek-OCR-2

./: .gitignore  README.md
mlx/: ocr.py  ocr_server.py  pyproject.toml
ollama/: Modelfile  OLLAMA.md  ollama-deepseekocr2.patch
ollama/model/deepseekocr2/: imageprocessor.go  model.go  model_qwen2.go  model_sam.go  model_text.go
pytorch/: apply_patch.py  ocr_cpu.py  ocr_hybrid.py  pyproject.toml
pytorch/patches/: PATCHING.md
